logs/gispython.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/GISPython'...
Compiling './lib/python3.5/site-packages/GISPython/AGServerHelper.py'...
***   File "./lib/python3.5/site-packages/GISPython/AGServerHelper.py", line 132
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GISPython/AGServerHelperNTLM.py'...
***   File "./lib/python3.5/site-packages/GISPython/AGServerHelperNTLM.py", line 143
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GISPython/FTPHleper.py'...
***   File "./lib/python3.5/site-packages/GISPython/FTPHleper.py", line 48
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GISPython/GISPythonModule.py'...
***   File "./lib/python3.5/site-packages/GISPython/GISPythonModule.py", line 119
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/GISPython/PShell'...
Compiling './lib/python3.5/site-packages/GISPython/SysGISTools.py'...
***   File "./lib/python3.5/site-packages/GISPython/SysGISTools.py", line 69
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/GISPython/SysTools_unittest.py'...
***   File "./lib/python3.5/site-packages/GISPython/SysTools_unittest.py", line 21
    print u"Preparing for tests..."
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/GISPython-1.35.1.egg-info'...
Listing './lib/python3.5/site-packages/PyNaCl-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/bcrypt-3.1.4.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/nacl'...
Listing './lib/python3.5/site-packages/nacl/bindings'...
Listing './lib/python3.5/site-packages/nacl/pwhash'...
Listing './lib/python3.5/site-packages/ntlm'...
Compiling './lib/python3.5/site-packages/ntlm/HTTPNtlmAuthHandler.py'...
***   File "./lib/python3.5/site-packages/ntlm/HTTPNtlmAuthHandler.py", line 110
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/U32.py'...
***   File "./lib/python3.5/site-packages/ntlm/U32.py", line 18
    C = 0x1000000000L
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/des_c.py'...
***   File "./lib/python3.5/site-packages/ntlm/des_c.py", line 208
    r, l, t = PERM_OP((r, l, t),  4, U32(0x0f0f0f0fL))
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/des_data.py'...
***   File "./lib/python3.5/site-packages/ntlm/des_data.py", line 25
    U32(0x00820200L), U32(0x00020000L), U32(0x80800000L), U32(0x80820200L),
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ntlm/ntlm.py'...
***   File "./lib/python3.5/site-packages/ntlm/ntlm.py", line 112
    print "NTLM_NegotiateUnicode set"
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/paramiko'...
Listing './lib/python3.5/site-packages/paramiko-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/patool-1.12.dist-info'...
Listing './lib/python3.5/site-packages/patoolib'...
Listing './lib/python3.5/site-packages/patoolib/programs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/python_ntlm-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
